--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="col-md-6  pt-3 pb-3">
                 <div class="">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/d95PPykB2vE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
+                        <iframe width="100%" height="auto" src="https://youtu.be/DDC3H3ujEEQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
                         <div class="overlay trigger" src="https://www.youtube.com/embed/d95PPykB2vE" data-val="d95PPykB2vE" data-target="#videoModal" data-toggle="modal"></div>
                     </div>
                 </div>
