--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-md-6  pt-3 pb-3">
                 <div class="">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/FUiu-cdu6mA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/NBWKmIouw-Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <div class="overlay trigger" data-val="FUiu-cdu6mA" data-target="#videoModal" data-toggle="modal"></div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
 
             <div class="col-md-6  pt-3 pb-3">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/Nj4891uXAk4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/CVYUH0to2Pw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="overlay trigger" data-val="Nj4891uXAk4" data-target="#videoModal" data-toggle="modal"></div>
                 </div>
             </div>
