--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                     <div class="overlay trigger" data-val="Nj4891uXAk4" data-target="#videoModal" data-toggle="modal"></div>
                 </div>
             </div>
+<div class="col-md-6  pt-3 pb-3">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/1DntEbWMX_I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="overlay trigger" data-val="Nj4891uXAk4" data-target="#videoModal" data-toggle="modal"></div>
+                </div>
+            </div>
         </div>
 
 
