--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe width="100%" height="auto" src="https://www.youtube.com/embed/DDC3H3ujEEQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" ></iframe>
-                        <div class="overlay trigger" src="https://www.youtube.com/embed/DDC3H3ujEEQ" data-val="d95PPykB2vE" data-target="#videoModal" data-toggle="modal"></div>
+                        <div class="overlay trigger" src="https://www.youtube.com/embed/DDC3H3ujEEQ" data-val="DDC3H3ujEEQ" data-target="#videoModal" data-toggle="modal"></div>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                 <div class="">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe width="100%" height="315" src="https://www.youtube.com/embed/NBWKmIouw-Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <div class="overlay trigger" data-val="FUiu-cdu6mA" data-target="#videoModal" data-toggle="modal"></div>
+                        <div class="overlay trigger" data-val="NBWKmIouw-Y" data-target="#videoModal" data-toggle="modal"></div>
                     </div>
                 </div>
             </div>
@@ -74,13 +74,13 @@
             <div class="col-md-6  pt-3 pb-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/CVYUH0to2Pw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="overlay trigger" data-val="Nj4891uXAk4" data-target="#videoModal" data-toggle="modal"></div>
+                    <div class="overlay trigger" data-val="CVYUH0to2Pw" data-target="#videoModal" data-toggle="modal"></div>
                 </div>
             </div>
 <div class="col-md-6  pt-3 pb-3">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/1DntEbWMX_I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="overlay trigger" data-val="Nj4891uXAk4" data-target="#videoModal" data-toggle="modal"></div>
+                    <div class="overlay trigger" data-val="1DntEbWMX_I" data-target="#videoModal" data-toggle="modal"></div>
                 </div>
             </div>
         </div>
